--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,6 @@ platform = teensy
 board = teensy35
 framework = arduino
 lib_deps = 
-	stevemarple/AsyncDelay@^1.1.2
-	davetcc/TaskManagerIO@^1.2.3
-	https://github.com/tonton81/FlexCAN_T4.git
-    https://github.com/odriverobotics/ODriveArduino.git
+	https://github.com/odriverobotics/ODriveArduino.git
+	https://github.com/jremington/MPU-9250-AHRS
+	thomasfredericks/Chrono@^1.2.0
