update vesc only

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	https://github.com/odriverobotics/ODriveArduino.git
 	https://github.com/jremington/MPU-9250-AHRS
 	thomasfredericks/Chrono@^1.2.0
+	solidgeek/VescUart@1.0.0
